# readlaterbot

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile  tab.yml
.cargo-husky/hooks/: precommit-hook
src/: archive.rs  db.rs  delete.rs  keyboards.rs  link_finder.rs  main.rs  post.rs  random.rs
src/handlers/: add.rs  archive.rs  delete.rs  get_all_posts.rs  mod.rs  prelude.rs  random.rs  unarchive.rs
