[package]
name = "readlaterbot"
version = "0.1.0"
authors = ["Orin Serimon <orin220444@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
rusqlite = "0.24"
teloxide-macros = "0.3"
dotenv = "0.15.0"
rand = "0.7"
log = "0.4"
pretty_env_logger = "0.4.0"
serde_rusqlite = "0.26.0"
serde_derive = "*"
serde = "*"
chrono = "0.4"
anyhow = "1.0"
[dependencies.tokio]
version =  "0.2"
features = ["rt-threaded", "macros"]
[dependencies.reqwest]
version = "0.10.8"
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
	"precommit-hook",
	"run-cargo-check",
	"run-cargo-clippy",
	"run-cargo-fmt"
]
