[package]
name = "readlaterbot"
version = "0.1.0"
authors = ["Orin Serimon <orin220444@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24"
dotenv = "0.15.0"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
serde_rusqlite = "0.26"
serde_derive = "*"
serde = {version = "*", features = ["derive"]}
chrono = "0.4"
anyhow = "1.0"
url = "2"
tokio-stream = "0.1.5"
typed-builder = "0.9.0"
teloxide = {version = "0.4", features = ["macros", "auto-send"] }
tokio = {version =  "1.4",features = ["rt-multi-thread", "macros"] }
reqwest = "0.11"

[profile.release]
lto = true
[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
	"user-hooks"
] }
